js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-import-source-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
{
import
.
source
(
)
;
}
;
